--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks</title>
     <link href="/css/style.css" rel="stylesheet" />
+    <meta http-equiv="Content-Security-Policy" content="default-src https:">
 </head>
 
 <body>
