--- a/static/index.html
+++ b/static/index.html
@@ -30,11 +30,11 @@
                             <div class="bg-red-600 text-white mr-4 px-4 rounded-full">${this.state.amount.toString()}</div>${this.props.item}
                         </div>
                         <div class="flex">
-                            <div class="bg-green-600 text-white w-6 ml-4 text-center rounded-full"> <i class="fas fa-plus"></i>
+                            <div class="bg-green-600 text-white w-6 h-6 ml-4 text-center rounded-full"> <i class="fas fa-plus"></i>
                             </div>
                         </div>
                     </div>
-                    <div .onclick=${() => this.setState({ amount: this.state.amount > 0 ? this.state.amount - 1 : 0 })} class="bg-red-600 text-white w-16 text-4xl text-center m-4 flex justify-center items-center rounded-full">
+                    <div .onclick=${() => this.setState({ amount: this.state.amount > 0 ? this.state.amount - 1 : 0 })} class="bg-red-600 text-white w-16 h-16 text-4xl text-center m-4 flex justify-center items-center rounded-full">
                         <i class="fas fa-minus" ></i>
                     </div>
                 </div>`
