--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
             }
             render() {
                 return html`<div class="flex w-full">
-                    <div class="bg-white w-full text-black m-4 rounded-xl p-4 flex justify-between" .onclick=${() => this.setState({ amount: this.state.amount + 1 })}>
+                    <div class="bg-white w-full text-black m-4 my-2 rounded-xl p-4 flex justify-between" .onclick=${() => this.setState({ amount: this.state.amount + 1 })}>
                         <div class="flex items-center">
                             ${this.props.item}
                         </div>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="flex items-center">
-                    <div .onclick=${() => this.setState({ amount: this.state.amount > 0 ? this.state.amount - 1 : 0 })} class="bg-red-600 text-white w-16 h-16 text-4xl text-center m-4 ml-0 flex justify-center items-center rounded-full">
+                    <div .onclick=${() => this.setState({ amount: this.state.amount > 0 ? this.state.amount - 1 : 0 })} class="bg-red-600 text-white w-16 h-16 text-4xl text-center m-4 my-2 ml-0 flex justify-center items-center rounded-full">
                         <i class="fas fa-minus" ></i>
                     </div>
                     </div>
