--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
                         <div class="flex items-center">
                             ${this.props.item}
                         </div>
-                        <div class="flex items-center"><div class="bg-red-600 text-white mr-4 justify-center items-center px-4 rounded-full">${this.state.amount.toString()}</div>
+                        <div class="flex items-center"><div class="bg-red-600 text-white justify-center items-center px-4 rounded-full">${this.state.amount.toString()}</div>
                             <div class="bg-green-600 text-white w-6 h-6 ml-4 text-center rounded-full"> <i class="fas fa-plus"></i>
                             </div>
                         </div>
